refactored sweep functions. fixed artwork generator not taking expression for some fields

--- a/.env
+++ b/.env
@@ -1,3 +1,15 @@
+# .env
+
+# Define the root of your project. This can be relative or absolute.
+CONURE_PATH=./
+
+# Define the relative paths from the conure directory.
+CONURE_ARTWORK_GENERATOR_PATH=artwork_generator/artwork_generator.py
+CONURE_SWEEP_PATH=sweep/sweep.py
+CONURE_SIMULATOR_PATH=simulator/simulator.py
+
+
+#Vite backend hostname and port.
 VITE_API_HOST=http://localhost
 VITE_BACKEND_PORT=5005
 
