--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ CONURE_SIMULATOR_PATH=simulator/simulator.py
 
 
 #Vite backend hostname and port.
-VITE_API_HOST=http://localhost
+VITE_API_HOST=http://127.0.0.1
 VITE_BACKEND_PORT=5070
 
