tested docker container

--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ CONURE_SIMULATOR_PATH=simulator/simulator.py
 
 
 #Vite backend hostname and port.
-VITE_API_HOST=http://localhost
-VITE_BACKEND_PORT=5070
+VITE_API_HOST=http://backend
+VITE_BACKEND_PORT=5000
 
+# Add this line:
+FRONTEND_PORT=5173
