--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ CONURE_SIMULATOR_PATH=simulator/simulator.py
 
 
 #Vite backend hostname and port.
-VITE_API_HOST=http://backend
+VITE_API_HOST=http://localhost
 VITE_BACKEND_PORT=5000
 
 # Add this line:
